<resources>
    <string name="app_name">Dictionary</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="button">Button</string>
    <string name="en_word">EN word</string>
    <string name="translation1">Translation1</string>
    <string name="translation2">Translation2</string>
    <string name="translation3">Translation3</string>
    <string name="priority">Priority</string>
</resources>